# MigTD

./: .gitignore  .gitmodules  Cargo.toml  GetVMLog.ps1  Makefile  azcvmemu.patch  migtdemu.sh  readme.md
.github/workflows/: deny.yml  integration-emu.yml  main.yml  pr-test.yml
config/: collateral_production_fmspc.json  policy_issuer_chain.pem  policy_v2_signed.json  servtd_info.txt  servtd_info_EMR.json  servtd_info_GNR.json
config/AzCVMEmu/: policy_issuer_chain.pem  policy_v2_signed.json
config/Azure/: collateral_thim.json  policy_data_raw.json  tcb_mapping.json  td_identity.json
config/templates/: policy_v2.json  policy_v2_data.json
container/: Dockerfile
doc/: AzCVMEmu.md  azcvmemu_api.md
examples/hello_world/: Cargo.toml  README.md  build.rs
examples/hello_world/src/: main.rs
examples/verify_quote_app/: Cargo.toml  README.md  build.rs
examples/verify_quote_app/src/: collateral.rs  main.rs  main_simple.rs
sh_script/: build_AzCVMEmu_policy_and_test.sh  trim_linux_sgx.sh
sh_script/Azure/: Makefile  build_azure_mock_test.sh
src/attestation/: Cargo.toml  build.rs  fixup-libservtd-attest-lib.sh
src/attestation/src/: attest.rs  binding.rs  collateral.rs  ghci.rs  igvmattest.rs  lib.rs  mock_quote.rs
src/crypto/src/: lib.rs
src/crypto/src/rustls_impl/: tls.rs
src/devices/tcp_transport/: Cargo.toml
src/devices/tcp_transport/src/: lib.rs  stream.rs
src/devices/vmcall_raw/: Cargo.toml
src/devices/vmcall_raw/src/: lib.rs
src/devices/vmcall_raw/src/transport/: vmcall.rs
src/migtd/: Cargo.toml  build.rs
src/migtd/src/: config.rs  event_log.rs  lib.rs  mig_policy.rs  quote.rs
src/migtd/src/driver/: ticks.rs  timer.rs
src/migtd/src/migration/: data.rs  event.rs  logging.rs  mod.rs  pre_session_data.rs  rebinding.rs  servtd_ext.rs  session.rs
src/migtd/src/quote/: mock_quote_support.rs  mod.rs
src/migtd/src/ratls/: mod.rs  server_client.rs
src/migtd/src/spdm/: mod.rs  spdm_rebind.rs  spdm_req.rs  spdm_rsp.rs
src/policy/: Cargo.toml
src/policy/sh_scripts/: README.md  gen_signed_policy_and_cert_chain.sh  generate_certificates.sh  generate_policy.sh
src/policy/src/: config.rs  lib.rs  verify.rs
src/policy/src/v1/: verify.rs
src/policy/src/v2/: policy.rs  servtd_collateral.rs
src/policy/test/policy_v2/: policy_v2.json
src/policy/test/policy_v2/cert_chain/: policy_issuer_chain.pem
tools/migtd-policy-generator/: Cargo.toml
tools/servtd-collateral-generator/: Cargo.toml
