[workspace]

members = [
    "src/attestation",
    "src/crypto",
    "src/devices/pci",
    "src/devices/virtio",
    "src/devices/vsock",
    "src/devices/virtio_serial",
    "src/devices/vmcall_raw",
    "src/migtd",
    "src/policy",
    "src/async/async_io",
    "src/async/async_runtime",
    "tests/test-td-payload",
    "tools/migtd-hash",
    "tools/migtd-policy-generator",
    "xtask",
    ]

default-members = [
    "src/migtd",
    ]

exclude = [
    "deps/td-shim",
    "deps/rustls",
    "deps/td-shim-AzCVMEmu"
    ]

resolver = "2"

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic
opt-level = "z"
lto = true
strip = true

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
opt-level = "z"
lto = true

[patch.crates-io]
ring = { path = "deps/td-shim/library/ring" }
az-tdx-vtpm = { version = "0.7", git = "https://github.com/kinvolk/azure-cvm-tooling", package = "az-tdx-vtpm" }

[patch."https://github.com/confidential-containers/td-shim"]
td-shim = { path = "deps/td-shim/td-shim" }
td-shim-interface = { path = "deps/td-shim/td-shim-interface" }

# Note: Since this is a workspace Cargo.toml, features are specified in the crate-level Cargo.toml files
# The AzCVMEmu feature is defined in src/migtd/Cargo.toml

# When AzCVMEmu feature is enabled, use the emulated td-shim implementations
# For AzCVMEmu feature, the patching is handled in the individual crates
