[package]
name = "verify_quote_app"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "verify_quote_app"
path = "src/main.rs"

[dependencies]
hex = "0.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
