[package]
name = "verify_quote_app"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "verify_quote_app"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
libc = "0.2"
az-tdx-vtpm = "0.7.1"
