[package]
name = "attestation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto = { path = "../crypto" }
der = { version = "0.7.9", features = ["oid", "alloc", "derive"] }
policy = {path = "../policy"}
spin = "0.9.2"

# Use emulated tdx-tdcall for AzCVMEmu, original for normal mode
tdx-tdcall-emu = { path = "../../deps/td-shim-AzCVMEmu/tdx-tdcall", package = "tdx-tdcall-emu", optional = true }
tdx-tdcall = { path = "../../deps/td-shim/tdx-tdcall", package = "tdx-tdcall" }

td-payload = { path = "../../deps/td-shim/td-payload", features = ["tdx"] }

[features]
default = []
test = []
AzCVMEmu = ["tdx-tdcall-emu"]
